--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           path: /tmp/repository/*.rpm
 
-  lap_2:
+  vscodium:
     runs-on: ubuntu-latest
     container: 
       image: clearlinux:latest
@@ -41,7 +41,27 @@ jobs:
         with:
           path: /tmp/repository/*.rpm
 
-  lap_3:
+  wine:
+    runs-on: ubuntu-latest
+    container: 
+      image: clearlinux:latest
+      options: --privileged --cap-add=SYS_ADMIN --security-opt apparmor:unconfined
+    strategy:
+      matrix:
+        pkg: [wine-tkg-git]
+    steps:
+      - name: Building a package
+        shell: bash
+        run: |
+          swupd bundle-add curl --quiet
+          curl -LO https://raw.githubusercontent.com/clearfraction/mass-rebuild/main/rebuild-package.sh && chmod +x ./rebuild-package.sh
+          ./rebuild-package.sh ${{ matrix.pkg }}
+      - name: Upload result
+        uses: actions/upload-artifact@v2
+        with:
+          path: /tmp/repository/*.rpm
+
+  lap_2:
     needs: lap_1
     runs-on: ubuntu-latest
     container: 
@@ -66,8 +86,8 @@ jobs:
         with:
           path: /tmp/repository/*.rpm
 
-  lap_4:
-    needs: lap_3
+  lap_3:
+    needs: lap_2
     runs-on: ubuntu-latest
     container: 
       image: clearlinux:latest
