--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -110,3 +110,13 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           path: /tmp/repository/*.rpm
+
+  finish:
+    needs: [lap_3, vscodium, wine]
+    runs-on: ubuntu-latest
+    steps:
+      - name: CD trigger
+        shell: bash
+        run: curl -X POST -H "Accept:application/vnd.github.v3+json" -H "Authorization:token '"$BUNDLES_TOKEN"'" https://api.github.com/repos/clearfraction/bundles/dispatches -d '{event_type:build}'
+        env:
+          BUNDLES_TOKEN: ${{ secrets.BUNDLES_TOKEN }}
