--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -118,6 +118,6 @@ jobs:
     steps:
       - name: CD trigger
         shell: bash
-        run: curl -X POST -H "Accept:application/vnd.github.v3+json" -H "Authorization:token '"$BUNDLES_TOKEN"'" https://api.github.com/repos/clearfraction/bundles/dispatches -d '{event_type:build}'
+        run: curl -i -u paulcarroty:$BUNDLES_TOKEN -X POST -H "Accept:application/vnd.github.v3+json" -d '{"event_type":"build"}' https://api.github.com/repos/clearfraction/bundles/dispatches
         env:
           BUNDLES_TOKEN: ${{ secrets.BUNDLES_TOKEN }}
