reuse vscodium build script

--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -35,8 +35,9 @@ jobs:
         shell: bash
         run: |
           swupd bundle-add curl --quiet
-          curl -LO https://raw.githubusercontent.com/clearfraction/mass-rebuild/main/vscodium-build.sh && chmod +x ./vscodium-build.sh
-          ./vscodium-build.sh
+          curl -LO https://github.com/clearfraction/vscodium/raw/main/build.sh && chmod +x ./build.sh
+          ./build.sh
+          mv /home/RPMS /tmp/repository
       - name: Upload result
         uses: actions/upload-artifact@v2
         with:
