--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -71,7 +71,7 @@ jobs:
       options: --privileged --cap-add=SYS_ADMIN --security-opt apparmor:unconfined
     strategy:
       matrix:
-        pkg: [pykeepass-python3, ffmpeg, gst-editing-services]
+        pkg: [pykeepass-python3, ffmpeg]
     steps:
       - name: Download result
         uses: actions/download-artifact@v2
@@ -96,7 +96,7 @@ jobs:
       options: --privileged --cap-add=SYS_ADMIN --security-opt apparmor:unconfined
     strategy:
       matrix:
-        pkg: [passwordsafe, gstreamer-libav, fractal, mpv, gstreamer-libav, shortwave]
+        pkg: [passwordsafe, gstreamer-libav, fluffychat, mpv, gstreamer-libav, shortwave]
     steps:
       - name: Download result
         uses: actions/download-artifact@v2
