--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -71,7 +71,7 @@ jobs:
       options: --privileged --cap-add=SYS_ADMIN --security-opt apparmor:unconfined
     strategy:
       matrix:
-        pkg: [ffmpeg]
+        pkg: [ffmpeg, alacritty, bspwm, rofi-wayland]
     steps:
       - name: Download result
         uses: actions/download-artifact@v2
