--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -76,7 +76,7 @@ jobs:
       options: --privileged --cap-add=SYS_ADMIN --security-opt apparmor:unconfined
     strategy:
       matrix:
-        pkg: [fluffychat, mpv, gstreamer-libav]
+        pkg: [fluffychat, mpv, gstreamer-libav, waybar]
     steps:
       - name: Download result
         uses: actions/download-artifact@v2
