--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -12,7 +12,7 @@ jobs:
       options: --privileged --cap-add=SYS_ADMIN --security-opt apparmor:unconfined
     strategy:
       matrix:
-        pkg: [secrets, lame, fdk-aac, x264, x265, shotwell, foliate, nv-codec-headers, libvdpau]
+        pkg: [secrets, lame, fdk-aac, x264, x265, shotwell, foliate, nv-codec-headers]
     steps:
       - name: Building a package
         shell: bash
