--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -12,7 +12,7 @@ jobs:
       options: --privileged --cap-add=SYS_ADMIN --security-opt apparmor:unconfined
     strategy:
       matrix:
-        pkg: [secrets, lame, fdk-aac, x264, x265, shotwell, foliate, nv-codec-headers]
+        pkg: [secrets, lame, fdk-aac, x264, x265, shotwell, foliate, nv-codec-headers, alacritty, kitty]
     steps:
       - name: Building a package
         shell: bash
@@ -51,7 +51,7 @@ jobs:
       options: --privileged --cap-add=SYS_ADMIN --security-opt apparmor:unconfined
     strategy:
       matrix:
-        pkg: [ffmpeg, ffmpeg-cuda, alacritty, kitty, kanshi, wlsunset, rofi-wayland, wl-clipboard, wlr-randr, btop, swayblur, oguri, autotiling, swaylock-effects, imv, nvidia-vaapi-driver, vdpau-va-driver-vp9]
+        pkg: [ffmpeg, ffmpeg-cuda, kanshi, wlsunset, rofi-wayland, wl-clipboard, wlr-randr, swayblur, oguri, autotiling, swaylock-effects, imv, nvidia-vaapi-driver, vdpau-va-driver-vp9]
     steps:
       - name: Download result
         uses: actions/download-artifact@v2
