--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -76,7 +76,7 @@ jobs:
       options: --privileged --cap-add=SYS_ADMIN --security-opt apparmor:unconfined
     strategy:
       matrix:
-        pkg: [gomuks, wob, mpv, mpv-cuda, gstreamer-libav, waybar, wf-recorder, grim, playerctl, brightnessctl, xdg-desktop-portal-wlr]
+        pkg: [gomuks, wob, mpv, mpv-cuda, yt-dlp, gstreamer-libav, waybar, wf-recorder, grim, playerctl, brightnessctl, xdg-desktop-portal-wlr]
     steps:
       - name: Download result
         uses: actions/download-artifact@v2
