--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -25,6 +25,23 @@ jobs:
         with:
           path: /tmp/repository/*.rpm
 
+  lapce:
+    runs-on: ubuntu-latest
+    container: 
+      image: clearlinux:latest
+      options: --privileged --cap-add=SYS_ADMIN --security-opt apparmor:unconfined
+    steps:
+      - name: Building a package
+        shell: bash
+        run: |
+          swupd bundle-add curl --quiet
+          curl -LO https://raw.githubusercontent.com/clearfraction/mass-rebuild/main/rebuild-package.sh && chmod +x ./rebuild-package.sh
+          ./rebuild-package.sh lapce
+      - name: Upload result
+        uses: actions/upload-artifact@v2
+        with:
+          path: /tmp/repository/*.rpm
+
   vscodium:
     runs-on: ubuntu-latest
     container: 
@@ -94,7 +111,7 @@ jobs:
           path: /tmp/repository/*.rpm
 
   finish:
-    needs: [lap_3, vscodium]
+    needs: [lap_3, vscodium, lapce]
     runs-on: ubuntu-latest
     steps:
       - name: CD trigger
