--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -93,7 +93,7 @@ jobs:
       options: --privileged --cap-add=SYS_ADMIN --security-opt apparmor:unconfined
     strategy:
       matrix:
-        pkg: [gomuks, wob, mpv, mpv-cuda, yt-dlp, gstreamer-libav, waybar, wf-recorder, grim, playerctl, brightnessctl, mako, xdg-desktop-portal-wlr, webapp-manager]
+        pkg: [gomuks, wob, mpv, mpv-cuda, yt-dlp, gstreamer-libav, waybar, wf-recorder, grim, playerctl, brightnessctl, mako, xdg-desktop-portal-wlr, webapp-manager, qt6ct]
     steps:
       - name: Download result
         uses: actions/download-artifact@v2
