enable x86_64-v3 for vscodium

--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -53,6 +53,13 @@ jobs:
         run: |
           swupd bundle-add curl --quiet
           curl -LO https://github.com/clearfraction/vscodium/raw/main/build.sh && chmod +x ./build.sh
+          sed -i '/^export CFLAGS=.*/ s/\ "/-march=x86-64-v3 -m64 -Wl,-z,x86-64-v3\ "/' build.sh
+          sed -i '/^export CXXFLAGS=.*/ s/\ "/-march=x86-64-v3 -m64 -Wl,-z,x86-64-v3\ "/' build.sh
+          sed -i '/^export FFLAGS=.*/ s/\ "/-march=x86-64-v3 -m64-Wl,-z,x86-64-v3\ "/' build.sh
+          sed -i '/^export FCFLAGS=.*/ s/\ "/-march=x86-64-v3 -m64\ "/' build.sh
+          sed -i '/^export LDFLAGS=.*/ s/\ "/-march=x86-64-v3 -m64\ "/' build.sh
+          sed -i '/^export RUSTFLAGS=.*/ s/-C target-cpu=westmere/-C target-cpu=haswell/' build.sh
+          sed -i '/^export RUSTFLAGS=.*/ s/-C target-feature=+avx/-C target-feature=+avx2/' build.sh
           ./build.sh
           mv /home/RPMS /tmp/repository
       - name: Upload result
