--- a/.github/workflows/bundler.yml
+++ b/.github/workflows/bundler.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2
         with:
-          repo: clearfraction/mass-rebuild
+          repo: clearfraction/mass-rebuild-v2
           workflow: mass-rebuild.yml
           check_artifacts: true
           path: /home
@@ -33,19 +33,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: curl -LO https://raw.githubusercontent.com/clearfraction/bundles/master/Dockerfile
-      - name: Credentials
-        env: 
-          EMAIL: ${{ secrets.EMAIL }}
-          API_KEY: ${{ secrets.API_KEY }}
-        run: |
-          cat > ~/.netrc <<EOF
-            machine api.heroku.com
-              login $EMAIL
-              password $API_KEY
-          EOF
       - name: CD
         env:
           APP: "clearfraction"
-          VERCEL_REBUILD_HOOK: ${{ secrets.VERCEL_REBUILD_HOOK }}
+          VERCEL_REBUILD_HOOK2: ${{ secrets.VERCEL_REBUILD_HOOK2 }}
         run: |
-          curl -X POST ${VERCEL_REBUILD_HOOK}
+          curl -X POST ${VERCEL_REBUILD_HOOK2}
