--- a/.github/workflows/bundler.yml
+++ b/.github/workflows/bundler.yml
@@ -36,6 +36,6 @@ jobs:
       - name: CD
         env:
           APP: "clearfraction"
-          VERCEL_REBUILD_HOOK2: ${{ secrets.VERCEL_REBUILD_HOOK2 }}
+          VERCEL_REBUILD_HOOK: ${{ secrets.VERCEL_REBUILD_HOOK2 }}
         run: |
           curl -X POST ${VERCEL_REBUILD_HOOK2}
