--- a/.github/workflows/bundler.yml
+++ b/.github/workflows/bundler.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           swupd bundle-add curl --quiet
           cd /home && curl -s -LO https://github.com/clearfraction/bundles/raw/master/build.sh && chmod +x build.sh
+          sed -i "s|/V3/usr|/V3/notfound|g" build.sh
           ./build.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
