--- a/.github/workflows/format_bump.yml
+++ b/.github/workflows/format_bump.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           swupd bundle-add curl --quiet
           cd /home && curl -s -LO https://raw.githubusercontent.com/clearfraction/bundles/master/format_bump.sh && chmod +x format_bump.sh
+          sed -i "s|/V3/usr|/V3/notfound|g" format_bump.sh
           ./format_bump.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
