--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -3,7 +3,8 @@ on:
   #schedule: 
   #  - cron: '0 0 1 * *'
   workflow_dispatch:
-  
+  repository_dispatch:
+    types: [build]
 jobs:
   lap_1:
     runs-on: ubuntu-latest
@@ -116,6 +117,6 @@ jobs:
     steps:
       - name: CD trigger
         shell: bash
-        run: curl -i -u paulcarroty:$BUNDLES_TOKEN -X POST -H "Accept:application/vnd.github.v3+json" -d '{"event_type":"build"}' https://api.github.com/repos/clearfraction/mass-rebuild-v2/dispatches
+        run: curl -i -u paulcarroty:$BUNDLES_TOKEN -X POST -H "Accept:application/vnd.github.v3+json" -d '{"event_type":"start_bundler"}' https://api.github.com/repos/clearfraction/mass-rebuild-v2/dispatches
         env:
           BUNDLES_TOKEN: ${{ secrets.BUNDLES_TOKEN }}
