--- a/.github/workflows/mass-rebuild.yml
+++ b/.github/workflows/mass-rebuild.yml
@@ -13,7 +13,7 @@ jobs:
       options: --privileged --cap-add=SYS_ADMIN --security-opt apparmor:unconfined
     strategy:
       matrix:
-        pkg: [secrets, lame, fdk-aac, x264, x265, shotwell, foliate, alacritty, kitty, wezterm]
+        pkg: [lame, fdk-aac, x264, x265, shotwell, foliate, alacritty, kitty, wezterm]
     steps:
       - name: Building a package
         shell: bash
